[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Living Room/Drawer.gd" type="Script" id=1]
[ext_resource path="res://assets/images/items/Level 5-lemari/lemari1 (ada kunci).png" type="Texture" id=2]
[ext_resource path="res://assets/images/items/Level 5-lemari/kunci.png" type="Texture" id=3]
[ext_resource path="res://src/transition.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.24301, 21.9597 )

[sub_resource type="Animation" id=2]
resource_name = "move_in"
tracks/0/type = "value"
tracks/0/path = NodePath("The Key:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 500, -200 ), Vector2( 500, 300 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "move_out"
tracks/0/type = "value"
tracks/0/path = NodePath("The Key:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 500, 305 ), Vector2( 500, 690 ) ]
}

[node name="Drawer" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 512, 300 )
scale = Vector2( 0.26, 0.27 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="key" type="Area2D" parent="."]
position = Vector2( 742, 407 )
rotation = -0.987644

[node name="CollisionShape2D" type="CollisionShape2D" parent="key"]
position = Vector2( -0.550629, -0.834778 )
rotation = -0.143723
shape = SubResource( 1 )

[node name="The Key" type="Sprite" parent="."]
position = Vector2( 500, -200 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="The Key" type="Area2D" parent="The Key"]
position = Vector2( 0, 2830 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="The Key/The Key"]
position = Vector2( 20, -3160 )
polygon = PoolVector2Array( -10, -10.0001, 55, -5.00012, 90, 39.9999, 80, 94.9999, 10, 145, 15, 630, -10, 640, -25, 630, -35, 595, -75, 585, -100, 575, -110, 595, -135, 590, -135, 565, -115, 535, -130, 515, -130, 485, -100, 510, -75, 495, -40, 495, -20, 155, -45, 120, -70, 110, -100, 84.9999, -105, 29.9999, -95, 4.99988, -50, -15.0001, -25, -25.0001 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/move_in = SubResource( 2 )
anims/move_out = SubResource( 3 )

[node name="transition" parent="." instance=ExtResource( 4 )]

[connection signal="input_event" from="key" to="." method="_on_key_input_event"]
[connection signal="mouse_entered" from="key" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="key" to="." method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="The Key/The Key" to="." method="_on_The_Key_input_event"]
[connection signal="mouse_entered" from="The Key/The Key" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="The Key/The Key" to="." method="_on_Area2D_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
